# erp

./: README.md  flake.nix  index.html  package-lock.json  package.json  test_data.sql  vite.config.ts
src/: App.css  App.tsx  main.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/migrations/0001_create_companies/: up.sql
src-tauri/migrations/0001_initial_schema/: down.sql  up.sql
src-tauri/migrations/0002_add_invoice_status/: down.sql  up.sql
src-tauri/migrations/0002_create_invoices/: down.sql  up.sql
src-tauri/migrations/0003_create_products/: down.sql  up.sql
src-tauri/migrations/0004_add_product_indexes/: down.sql  up.sql
src-tauri/migrations/0005_create_customers/: up.sql
src-tauri/src/: customer.rs  db.rs  invoice.rs  lib.rs  main.rs  product.rs  schema.rs  settings.rs  stock.rs  warehouse.rs  warehouse_document.rs  warehouse_location.rs
src-tauri/src/commands/: company.rs  customer.rs  database.rs  invoice.rs  mod.rs  product.rs  settings.rs  stock.rs  warehouse.rs  warehouse_location.rs
src/components/: InputField.tsx  InvoicePreview.tsx  Layout.tsx  PrimaryButton.tsx
src/components/settings/: ColorSwatch.tsx  SectionHeader.tsx  SettingsPageHeader.tsx  ThemeCard.tsx
src/components/ui/: button.tsx  sidebar.tsx
src/context/: ThemeContext.tsx
src/hooks/: useCompanies.ts  useOnboarding.ts
src/i18n/: index.ts
src/i18n/locales/: en.json  pl.json
src/pages/: CompanySelection.tsx  Customers.tsx  Dashboard.tsx  InvoiceView.tsx  Invoices.tsx  Onboarding.tsx  Products.tsx  Settings.tsx  StockDocuments.tsx  Stocks.tsx  Warehouses.tsx
src/pages/customers/: CustomerForm.tsx
src/pages/products/: ProductForm.tsx  ProductTypeSelection.tsx
src/pages/products/service/: ServiceProductForm.tsx
src/pages/settings/: AdvancedSettings.tsx  AppearanceSettings.tsx
src/pages/stock-documents/: StockDocumentForm.tsx
src/pages/warehouses/: WarehouseForm.tsx
src/types/: company.ts  warehouse.ts
(+3 files in other folders)
