[package]
name = "erp"
version = "0.1.0"
description = "ERP"
authors = ["pengwius <pengwius@protonmail.ch>"]
edition = "2021"

[lib]
name = "erp_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

anyhow = "1"
once_cell = "1"
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
diesel = { version = "2.3.7", features = ["sqlite", "r2d2", "chrono", "returning_clauses_for_sqlite_3_35"] }
diesel_migrations = { version = "2.3.1", features = ["sqlite"] }
chrono = { version = "0.4.44", features = ["serde"] }
libsqlite3-sys = { version = "0.36.0", features = ["bundled"] }
